--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="text-gray-300 text-lg space-y-4 max-w-4xl mx-auto text-center md:text-left">
         <p>Halo, saya RooxJSphire. Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.</p>
-        <p><strong class="text-js-yellow font-semibold">Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar HTML, CSS, dan tentu saja, JavaScript.</p>
+        <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar HTML, CSS, dan tentu saja, JavaScript.</p>
       </div>
     </section>
 
