--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="text-gray-300 text-lg space-y-4 max-w-4xl mx-auto text-center md:text-left">
         <p>Halo, saya RooxJSphire. Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.</p>
-        <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar HTML, CSS, dan tentu saja, JavaScript.</p>
+        <p>Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar <strong class="text-js-yellow font-semibold">HTML, CSS, dan tentu saja, JavaScript.</strong></p>
       </div>
     </section>
 
@@ -98,7 +98,7 @@
       </div>
       <div class="max-w-2xl mx-auto">
         <h3 class="text-4xl font-bold text-white mb-4">Mari Terhubung</h3>
-        <p class="text-gray-400 text-lg mb-8">Hubungi saya atau bergabung di Forum Chat JSphire!</p>
+        <p class="text-gray-400 text-lg mb-8">Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!</p>
         <div class="flex justify-center items-center space-x-6">
           <a href="mailto:rooxjsphire@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fas fa-envelope"></i></a>
           <a href="https://wa.me/6288991838060" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-whatsapp"></i></a>
