--- a/index.html
+++ b/index.html
@@ -92,21 +92,71 @@
     </section>
 
     <!-- Kontak -->
-    <section id="kontak" class="py-24 text-center">
-      <div class="section-header max-w-xl mx-auto">
-        <h2 class="text-js-yellow">Hubungi Saya</h2>
-      </div>
-      <div class="max-w-2xl mx-auto">
+    <section id="tentang" class="py-24">
+            <div class="section-header">
+                <h2 class="text-js-yellow"><span class="font-mono text-xl mr-2"></span>Tentang Saya</h2>
+            </div>
+            <div class="text-gray-300 text-lg space-y-4 max-w-4xl mx-auto text-center md:text-left">
+                <p>
+                    Halo, saya RooxJSphire. Perjalanan saya di dunia koding dimulai dari kecintaan murni terhadap JavaScript, bahasa yang menurut saya memiliki kekuatan dan fleksibilitas tanpa batas. Dari sana, saya melihat adanya kebutuhan akan sebuah wadah bagi para developer, baik pemula maupun ahli, untuk berdiskusi dan bertumbuh bersama.
+                </p>
+                <p>
+                    Itulah yang melatarbelakangi lahirnya <strong class="text-js-yellow font-semibold">Forum Chat JSphire</strong>. Sebuah platform yang saya dirikan dengan tujuan membangun komunitas yang solid, suportif, dan inovatif. Fokus utama saya saat ini adalah mengembangkan fitur-fitur forum dan memastikan JSphire menjadi tempat yang nyaman untuk belajar dan berbagi pengetahuan seputar HTML, CSS, dan tentu saja, JavaScript.
+                </p>
+            </div>
+        </section>
+
+        <!-- Skill Section -->
+        <section id="skill" class="py-24">
+            <div class="section-header">
+                <h2 class="text-js-yellow"><span class="font-mono text-xl mr-2"></span>Keahlian</h2>
+            </div>
+            <div class="max-w-2xl mx-auto grid grid-cols-1 sm:grid-cols-3 gap-8 text-center">
+                <div class="skill-card bg-dark-card p-8 rounded-lg">
+                    <i class="fab fa-html5 text-6xl text-orange-500 mb-4"></i>
+                    <h3 class="font-semibold text-xl text-white">HTML</h3>
+                </div>
+                <div class="skill-card bg-dark-card p-8 rounded-lg">
+                    <i class="fab fa-css3-alt text-6xl text-blue-500 mb-4"></i>
+                    <h3 class="font-semibold text-xl text-white">CSS</h3>
+                </div>
+                <div class="skill-card bg-dark-card p-8 rounded-lg">
+                    <i class="fab fa-js-square text-6xl text-js-yellow mb-4"></i>
+                    <h3 class="font-semibold text-xl text-white">JavaScript</h3>
+                </div>
+            </div>
+        </section>
+
+        <!-- Kontak Section -->
+<section id="kontak" class="py-24 text-center">
+    <div class="section-header max-w-xl mx-auto">
+        <h2 class="text-js-yellow"><span class="font-mono text-xl mr-2"></span>Hubungi Saya</h2>
+    </div>
+    <div class="max-w-2xl mx-auto">
         <h3 class="text-4xl font-bold text-white mb-4">Mari Terhubung</h3>
-        <p class="text-gray-400 text-lg mb-8">Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!</p>
-        <div class="flex justify-center items-center space-x-6">
-          <a href="mailto:rooxjsphire@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fas fa-envelope"></i></a>
-          <a href="https://wa.me/6288991838060" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-whatsapp"></i></a>
-          <a href="https://github.com/rooxJSphire" target="_blank" title="GitHub" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-github"></i></a>
-          <a href="https://t.me/rooxJSphire" target="_blank" title="Telegram" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-telegram"></i></a>
+        <p class="text-gray-400 text-lg mb-8">
+            Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!
+        </p>
+        <div class="flex justify-center items-center space-x-6 mb-10">
+            <a href="mailto:rooxjsphire@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fas fa-envelope"></i></a>
+            <a href="https://wa.me/6288991838060" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://github.com/rooxJSphire" target="_blank" title="GitHub" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-github"></i></a>
+            <a href="https://t.me/rooxJSphire" target="_blank" title="Telegram" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-telegram"></i></a>
         </div>
-      </div>
-    </section>
+
+        <!-- Tombol Gabung Forum Chat JSphire -->
+        <div class="flex justify-center flex-col sm:flex-row gap-4">
+            <a href="https://chat.whatsapp.com/DCzXrhtm5c07WIEzShtICD" target="_blank"
+               class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
+                Gabung JSphire 1
+            </a>
+            <a href="https://chat.whatsapp.com/BXzXrhtm5c07WIEXyzYICX" target="_blank"
+               class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
+                Gabung JSphire 2
+            </a>
+        </div>
+    </div>
+</section>
   </main>
 
   <!-- Footer -->
