--- a/index.html
+++ b/index.html
@@ -128,34 +128,44 @@
         </section>
 
         <!-- Kontak Section -->
+<!-- Kontak -->
 <section id="kontak" class="py-24 text-center">
-    <div class="section-header max-w-xl mx-auto">
-        <h2 class="text-js-yellow"><span class="font-mono text-xl mr-2"></span>Hubungi Saya</h2>
+  <div class="section-header max-w-xl mx-auto">
+    <h2 class="text-js-yellow">Hubungi Saya</h2>
+  </div>
+  <div class="max-w-2xl mx-auto">
+    <h3 class="text-4xl font-bold text-white mb-4">Mari Terhubung</h3>
+    <p class="text-gray-400 text-lg mb-8">
+      Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya.
+      Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!
+    </p>
+    <div class="flex justify-center items-center space-x-6 mb-10">
+      <a href="mailto:rooxjsphire@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://wa.me/6288991838060" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+      <a href="https://github.com/rooxJSphire" target="_blank" title="GitHub" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://t.me/rooxJSphire" target="_blank" title="Telegram" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl">
+        <i class="fab fa-telegram"></i>
+      </a>
     </div>
-    <div class="max-w-2xl mx-auto">
-        <h3 class="text-4xl font-bold text-white mb-4">Mari Terhubung</h3>
-        <p class="text-gray-400 text-lg mb-8">
-            Punya pertanyaan, ide, atau hanya ingin menyapa? Jangan ragu untuk menghubungi saya. Saya selalu terbuka untuk diskusi dan kolaborasi. Anda juga bisa bergabung di Forum Chat JSphire!
-        </p>
-        <div class="flex justify-center items-center space-x-6 mb-10">
-            <a href="mailto:rooxjsphire@gmail.com" title="Email" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fas fa-envelope"></i></a>
-            <a href="https://wa.me/6288991838060" target="_blank" title="WhatsApp" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://github.com/rooxJSphire" target="_blank" title="GitHub" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-github"></i></a>
-            <a href="https://t.me/rooxJSphire" target="_blank" title="Telegram" class="text-gray-400 hover:text-js-yellow transition-colors text-3xl"><i class="fab fa-telegram"></i></a>
-        </div>
 
-        <!-- Tombol Gabung Forum Chat JSphire -->
-        <div class="flex justify-center flex-col sm:flex-row gap-4">
-            <a href="https://chat.whatsapp.com/DCzXrhtm5c07WIEzShtICD" target="_blank"
-               class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
-                Gabung JSphire 1
-            </a>
-            <a href="https://chat.whatsapp.com/BXzXrhtm5c07WIEXyzYICX" target="_blank"
-               class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
-                Gabung JSphire 2
-            </a>
-        </div>
+    <!-- Tombol Gabung Grup -->
+    <div class="flex justify-center flex-col sm:flex-row gap-4">
+      <a href="https://chat.whatsapp.com/DCzXrhtm5c07WIEzShtICD" target="_blank"
+         class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
+        Gabung JSphire 1
+      </a>
+      <a href="https://chat.whatsapp.com/BXzXrhtm5c07WIEXyzYICX" target="_blank"
+         class="bg-js-yellow text-black font-semibold py-3 px-6 rounded-full hover:bg-yellow-300 transition duration-300">
+        Gabung JSphire 2
+      </a>
     </div>
+  </div>
 </section>
   </main>
 
